[package]
name = "nodes_speed_test"
version = "0.1.0"
edition = "2024"

[dependencies]
solana-client = "1.18.12"
solana-sdk = "1.18.12"
tokio = { version = "1", features = ["full"] }
clap = { version = "4.5.4", features = ["derive"] }
futures = "0.3"
solana-clap-v3-utils = "1.18.12"
solana-remote-wallet = "1.18.12"
shellexpand = "3.1.0"
log = "0.4"
env_logger = "0.11"
bs58 = "0.5.0"
reqwest = { version = "0.12", features = ["json"] }
serde_json = "1.0"
base64 = "0.22.0"
bincode = "1.3.3"
solana-rpc-client = "1.18.12"
solana-transaction-status = "1.18.12"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
rand = "0.8"
spl-memo = "4.0.0"
